# climate-change-effect-backend

./: .gitignore  BSPLINE_DATABASE_MIGRATION.md  main.py  pyproject.toml  test_bspline.py  test_bspline_mmt.py
data/rcp45/: wget-20250623160546.sh
data/rcp85/: wget-20250429165912.sh
migrations/: 001_create_bspline_tables.sql  002_create_temperature_histogram.sql
models/: base.py
scripts/: load_bspline_data.py  load_data_to_db.py  load_histogram_data.py
